--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,11 @@
       box-sizing: border-box;
     }
 
-    html,
-    body {
+ 
+
+    html,body {
       max-width: 540px;
-      margin: 0 auto;
+      margin: 0 auto !important;
       overflow: hidden;
     }
   </style>
